# devtools_scicomp_project_2025

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: run.py
src/pyclassify/: classifier.py  utils.py
test/: test_.py
